# cgproxy

./: .gitignore  .gitmodules  CMakeLists.txt  _clang-format  cgattach.cpp  cgdnsproxy.cmake  cgnoproxy  cgnoproxy.cmake  cgnoproxy.cpp  cgnoproxy.sh  cgproxy.conf  cgproxy.cpp  cgproxy.service  cgproxy.service.cmake  cgproxy.sh  cgproxyd  cgproxyd.cmake  cgproxyd.cpp  cgroup-tproxy.sh  cgroup-tproxy.sh.cmake  cgroup_attach.h  cgroup_attach.hpp  cgtproxy.sh  common.h  common.hpp  config.h  config.hpp  config.json  execsnoop.py  iptables.sh  main.cpp  nftables.sh  readme.md  run_in_cgroup.sh  socket_client.cpp  socket_client.h  socket_client.hpp  socket_server.h  socket_server.hpp  xt-tproxy.sh
aur-cgproxy-local/: PKGBUILD
control/: postinst  prerm
execsnoop-bcc/: CMakeLists.txt  execsnoop.cpp  execsnoop.h  readme.md
execsnoop-kernel/: CMakeLists.txt  arm64.md  arm_docker.md  execsnoop  execsnoop_kern.c  execsnoop_kern_skel.h  execsnoop_share.cpp  execsnoop_share.h  execsnoop_user.c  execsnoop_user_1.c  readme.md
execsnoop-kernel/aarch64/: execsnoop_kern_skel.h
execsnoop-kernel/x86_64/: execsnoop_kern_skel.h
execsnoop-libbpf/: CMakeLists.txt  Makefile  execsnoop.bpf.c  execsnoop.c  execsnoop.skel.h  execsnoop_share.cpp  execsnoop_share.h  libbpf-fPIC.patch  readme.md  vmlinux.h
man/: cgnoproxy.1  cgproxy.1  cgproxyd.1
pack/: CMakeLists.txt
src/: CMakeLists.txt  cgproxy.cpp  cgproxy.hpp  cgproxyd.cpp  cgproxyd.hpp  cgroup_attach.cpp  cgroup_attach.h  cgroup_attach.hpp  common.cmake.h  common.cpp  common.h  common.h.cmake  common.hpp  config.cpp  config.h  config.hpp  execsnoop.cpp  execsnoop.h  execsnoop.hpp  main.cpp  optional.cpp  optional.h  socket_client.cpp  socket_client.h  socket_client.hpp  socket_server.cpp  socket_server.h  socket_server.hpp
test/: CMakeLists.txt  socket_client_test.cpp  test.cpp
tools/: CMakeLists.txt  cgattach.cpp  execsnoop.cpp
v2ray_config/: 00_log.json  01_api.json  02_dns.json  03_policy.json  03_routing.json  05_inbounds_00_api.json  05_inbounds_03_http.json  05_inbounds_04_socks5.json  05_inbounds_tproxy.json  05_inbounds_tproxy_ipv4lo.json  05_inbounds_tproxy_ipv6lo.json  06_outbounds_01_freedom.json  06_outbounds_02_dns.json  06_outbounds_blackhole.json  merge.sh  readme.md  v2ray.service
